Made some more properties of the child VM configurable.